--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "A discord bot with dialogflow integration",
   "main": "index.js",
   "dependencies": {
-    "@google-cloud/dialogflow": "^2.0.0",
-    "axios": "^0.19.2",
-    "discord.js": "^12.2.0",
+    "@google-cloud/dialogflow": "^3.3.0",
+    "axios": "^0.21.0",
+    "discord.js": "^12.4.1",
     "dotenv": "^8.2.0",
-    "uuid": "^8.1.0"
+    "nodemon": "^2.0.6",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {},
   "scripts": {
